# goauth-cli

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  goauth.go  main.go
conf/: BUILD.bazel  conf.go  flags.go
oauth/: BUILD.bazel  clientid.go  clientid_test.go  jwt.go  oauth.go  serviceaccount.go  sign.go
