load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "oauth",
    srcs = [
        "clientid.go",
        "jwt.go",
        "oauth.go",
        "serviceaccount.go",
        "sign.go",
    ],
    importpath = "github.com/ZalgoNoise/goauth-cli/oauth",
    visibility = ["//visibility:public"],
)

go_test(
    name = "oauth_test",
    srcs = ["clientid_test.go"],
    embed = [":oauth"],
)
